Fixed query layout issue with collapsed notification

--- a/wwwroot/web-components/query-presenter/query-presenter.scss
+++ b/wwwroot/web-components/query-presenter/query-presenter.scss
@@ -21,9 +21,7 @@
         }
     }
 
-    &::slotted {
-        > vi-query-items-presenter, > vi-query {
-            @include flex();
-        }
+    ::slotted(vi-query-items-presenter), ::slotted(vi-query) {
+        @include flex();
     }
 }
